fix display html as plaintext

--- a/output.html
+++ b/output.html
@@ -1,1 +1,4 @@
-<a href="https://www.google.com" keyword="hello4">hello4</a><br /><a href="{link}" keyword="{keyword}">{anchor_text}</a><br />
+<!DOCTYPE html><html><head><title>Code For Backlink</title></head><body><a href="https://www.google.com" keyword="hello1">hello1
+</a><br /><pre><plaintext>Test<a href="https://www.google.com" keyword="hello3">hello3
+</a><br /></plaintext></pre><a href="https://www.google.com" keyword="hello2">hello2
+</a><br /></body></html>
