--- a/output.html
+++ b/output.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html><html><head><title>Code For Backlink</title></head><body><a href="https://www.google.com" keyword="hello1">hello1
-</a><br /><pre><plaintext>Test<a href="https://www.google.com" keyword="hello3">hello3
-</a><br /></plaintext></pre><a href="https://www.google.com" keyword="hello2">hello2
-</a><br /></body></html>
+<!DOCTYPE html><html><head><title>Code For Backlink</title></head><body><a href="https://www.google.com" keyword="hello2">hello2
+</a><br /><pre><code>&lt;a href=&quot;https://www.google.com&quot; keyword=&quot;hello1&quot;&gt;hello1
+&lt;/a&gt;&lt;br /&gt;</code></pre><a href="https://www.google.com" keyword="hello4">hello4</a><br /></body></html>
