success keyword, link, comment file. and success suffle keyword.

--- a/output.html
+++ b/output.html
@@ -1,8 +1,13 @@
-<<<<<<< HEAD
-<!DOCTYPE html><html><head><title>Code For Backlink</title></head><body><a href="https://www.google.com" keyword="hello2">hello2
-</a><br /><pre><code>&lt;a href=&quot;https://www.google.com&quot; keyword=&quot;hello1&quot;&gt;hello1
-&lt;/a&gt;&lt;br /&gt;</code></pre><a href="https://www.google.com" keyword="hello4">hello4</a><br /></body></html>
-=======
-<a href="https://www.google.com" keyword="hello1">hello1
-</a><br /><a href="{link}" keyword="{keyword}">{anchor_text}</a><br />
->>>>>>> d6e0275385e215ff27337933bb499c80f394e351
+<!DOCTYPE html><html><head><title>Code For Backlink</title></head><body><h1>1. ลิงค์แบบ Anchor link</h1>Unfortunately I need to concede every one of my endeavors to begin an online business were futile and I never made any genuine progress
+ <a href="https://www.youtube.com" keyword="iPhone case leather" rel="nofollow ugc">iPhone case leather
+</a> <br /><a href="https://www.youtube.com" keyword="iPhone repair services" rel="nofollow ugc">iPhone repair services
+</a> <br /><a href="https://www.youtube.com" keyword="iPhone storage upgrade" rel="nofollow ugc">iPhone storage upgrade
+</a> <br /><h1>2. ลิงค์แบบ HTML</h1>Unfortunately I need to concede every one of my endeavors to begin an online business were futile and I never made any genuine progress
+ &lt;a href=&quot;https://www.youtube.com&quot; keyword=&quot;iPhone case leather&quot; rel=&quot;nofollow ugc&quot;&gt;iPhone case leather
+&lt;/a&gt; <br />&lt;a href=&quot;https://www.youtube.com&quot; keyword=&quot;iPhone repair services&quot; rel=&quot;nofollow ugc&quot;&gt;iPhone repair services
+&lt;/a&gt; <br />&lt;a href=&quot;https://www.youtube.com&quot; keyword=&quot;iPhone storage upgrade&quot; rel=&quot;nofollow ugc&quot;&gt;iPhone storage upgrade
+&lt;/a&gt; <br /><h1>3. ลิงค์แบบ BB Code</h1>Unfortunately I need to concede every one of my endeavors to begin an online business were futile and I never made any genuine progress
+ [url=https://www.youtube.com]iPhone case leather
+[/url] <br />[url=https://www.youtube.com]iPhone repair services
+[/url] <br />[url=https://www.youtube.com]iPhone storage upgrade
+[/url] <br /></body></html>
