--- a/output.html
+++ b/output.html
@@ -1,13 +1,10 @@
-<!DOCTYPE html><html><head><title>Code For Backlink</title></head><body><h1>1. ลิงค์แบบ Anchor link</h1>Unfortunately I need to concede every one of my endeavors to begin an online business were futile and I never made any genuine progress
- <a href="https://www.youtube.com" keyword="iPhone case leather" rel="nofollow ugc">iPhone case leather
-</a> <br /><a href="https://www.youtube.com" keyword="iPhone repair services" rel="nofollow ugc">iPhone repair services
-</a> <br /><a href="https://www.youtube.com" keyword="iPhone storage upgrade" rel="nofollow ugc">iPhone storage upgrade
-</a> <br /><h1>2. ลิงค์แบบ HTML</h1>Unfortunately I need to concede every one of my endeavors to begin an online business were futile and I never made any genuine progress
- &lt;a href=&quot;https://www.youtube.com&quot; keyword=&quot;iPhone case leather&quot; rel=&quot;nofollow ugc&quot;&gt;iPhone case leather
-&lt;/a&gt; <br />&lt;a href=&quot;https://www.youtube.com&quot; keyword=&quot;iPhone repair services&quot; rel=&quot;nofollow ugc&quot;&gt;iPhone repair services
-&lt;/a&gt; <br />&lt;a href=&quot;https://www.youtube.com&quot; keyword=&quot;iPhone storage upgrade&quot; rel=&quot;nofollow ugc&quot;&gt;iPhone storage upgrade
-&lt;/a&gt; <br /><h1>3. ลิงค์แบบ BB Code</h1>Unfortunately I need to concede every one of my endeavors to begin an online business were futile and I never made any genuine progress
- [url=https://www.youtube.com]iPhone case leather
-[/url] <br />[url=https://www.youtube.com]iPhone repair services
-[/url] <br />[url=https://www.youtube.com]iPhone storage upgrade
+<!DOCTYPE html><html><head><title>Code For Backlink</title></head><body><h1>1. ลิงค์แบบ Anchor link</h1>Your blog is a valuable resource on how to live a good life and have positive thinking. Thank you for providing such great information. <a href="https://www.youtube.com" keyword="iPhone battery replacement" rel="nofollow ugc">iPhone battery replacement
+</a> <br /><a href="https://www.youtube.com" keyword="iPhone repair shop" rel="nofollow ugc">iPhone repair shop
+</a> <br /><a href="https://www.youtube.com" keyword="iPhone screen protector" rel="nofollow ugc">iPhone screen protector
+</a> <br /><h1>2. ลิงค์แบบ HTML</h1>Your blog is a valuable resource on how to live a good life and have positive thinking. Thank you for providing such great information. &lt;a href=&quot;https://www.youtube.com&quot; keyword=&quot;iPhone battery replacement&quot; rel=&quot;nofollow ugc&quot;&gt;iPhone battery replacement
+&lt;/a&gt; <br />&lt;a href=&quot;https://www.youtube.com&quot; keyword=&quot;iPhone repair shop&quot; rel=&quot;nofollow ugc&quot;&gt;iPhone repair shop
+&lt;/a&gt; <br />&lt;a href=&quot;https://www.youtube.com&quot; keyword=&quot;iPhone screen protector&quot; rel=&quot;nofollow ugc&quot;&gt;iPhone screen protector
+&lt;/a&gt; <br /><h1>3. ลิงค์แบบ BB Code</h1>Your blog is a valuable resource on how to live a good life and have positive thinking. Thank you for providing such great information. [url=https://www.youtube.com]iPhone battery replacement
+[/url] <br />[url=https://www.youtube.com]iPhone repair shop
+[/url] <br />[url=https://www.youtube.com]iPhone screen protector
 [/url] <br /></body></html>
