fix 3 comments to 6 comments

--- a/output.html
+++ b/output.html
@@ -1,10 +1,22 @@
-<!DOCTYPE html><html><head><title>Code For Backlink</title></head><body><h1>1. ลิงค์แบบ Anchor link</h1>Your blog is a valuable resource on how to live a good life and have positive thinking. Thank you for providing such great information. <a href="https://www.youtube.com" keyword="iPhone battery replacement" rel="nofollow ugc">iPhone battery replacement
-</a> <br /><a href="https://www.youtube.com" keyword="iPhone repair shop" rel="nofollow ugc">iPhone repair shop
+<!DOCTYPE html><html><head><title>Code For Backlink</title></head><body><h1>1. ลิงค์แบบ Anchor link</h1>Your blog is a wealth of knowledge. Thank you for sharing it with others.
+ <a href="https://www.youtube.com" keyword="iPhone tempered glass" rel="nofollow ugc">iPhone tempered glass
+</a> <br /><a href="https://www.youtube.com" keyword="iPhone repair services" rel="nofollow ugc">iPhone repair services
 </a> <br /><a href="https://www.youtube.com" keyword="iPhone screen protector" rel="nofollow ugc">iPhone screen protector
-</a> <br /><h1>2. ลิงค์แบบ HTML</h1>Your blog is a valuable resource on how to live a good life and have positive thinking. Thank you for providing such great information. &lt;a href=&quot;https://www.youtube.com&quot; keyword=&quot;iPhone battery replacement&quot; rel=&quot;nofollow ugc&quot;&gt;iPhone battery replacement
-&lt;/a&gt; <br />&lt;a href=&quot;https://www.youtube.com&quot; keyword=&quot;iPhone repair shop&quot; rel=&quot;nofollow ugc&quot;&gt;iPhone repair shop
+</a> <br /><a href="https://www.youtube.com" keyword="iPhone camera settings" rel="nofollow ugc">iPhone camera settings
+</a> <br /><a href="https://www.youtube.com" keyword="iPhone battery life" rel="nofollow ugc">iPhone battery life
+</a> <br /><a href="https://www.youtube.com" keyword="iPhone headphones noise cancelling" rel="nofollow ugc">iPhone headphones noise cancelling
+</a> <br /><h1>2. ลิงค์แบบ HTML</h1>Your blog is a wealth of knowledge. Thank you for sharing it with others.
+ &lt;a href=&quot;https://www.youtube.com&quot; keyword=&quot;iPhone tempered glass&quot; rel=&quot;nofollow ugc&quot;&gt;iPhone tempered glass
+&lt;/a&gt; <br />&lt;a href=&quot;https://www.youtube.com&quot; keyword=&quot;iPhone repair services&quot; rel=&quot;nofollow ugc&quot;&gt;iPhone repair services
 &lt;/a&gt; <br />&lt;a href=&quot;https://www.youtube.com&quot; keyword=&quot;iPhone screen protector&quot; rel=&quot;nofollow ugc&quot;&gt;iPhone screen protector
-&lt;/a&gt; <br /><h1>3. ลิงค์แบบ BB Code</h1>Your blog is a valuable resource on how to live a good life and have positive thinking. Thank you for providing such great information. [url=https://www.youtube.com]iPhone battery replacement
-[/url] <br />[url=https://www.youtube.com]iPhone repair shop
+&lt;/a&gt; <br />&lt;a href=&quot;https://www.youtube.com&quot; keyword=&quot;iPhone camera settings&quot; rel=&quot;nofollow ugc&quot;&gt;iPhone camera settings
+&lt;/a&gt; <br />&lt;a href=&quot;https://www.youtube.com&quot; keyword=&quot;iPhone battery life&quot; rel=&quot;nofollow ugc&quot;&gt;iPhone battery life
+&lt;/a&gt; <br />&lt;a href=&quot;https://www.youtube.com&quot; keyword=&quot;iPhone headphones noise cancelling&quot; rel=&quot;nofollow ugc&quot;&gt;iPhone headphones noise cancelling
+&lt;/a&gt; <br /><h1>3. ลิงค์แบบ BB Code</h1>Your blog is a wealth of knowledge. Thank you for sharing it with others.
+ [url=https://www.youtube.com]iPhone tempered glass
+[/url] <br />[url=https://www.youtube.com]iPhone repair services
 [/url] <br />[url=https://www.youtube.com]iPhone screen protector
+[/url] <br />[url=https://www.youtube.com]iPhone camera settings
+[/url] <br />[url=https://www.youtube.com]iPhone battery life
+[/url] <br />[url=https://www.youtube.com]iPhone headphones noise cancelling
 [/url] <br /></body></html>
