pbn success to combine with txt file as db.

--- a/pbn/output.html
+++ b/pbn/output.html
@@ -3,129 +3,129 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>https://www.youtube.com - My Website</title>
-    <meta name="description" content="5555555" />
-    <meta name="keywords" content="https://www.youtube.com, https://www.youtube.com, https://www.youtube.com" />
+    <title>Thailand - My Website</title>
+    <meta name="description" content="Hello this is introduction 100 words in setting.txt file" />
+    <meta name="keywords" content="Thailand, Japan, Hongkong" />
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://www.youtube.com">
-    <meta property="og:title" content="https://www.youtube.com - https://www.youtube.com" />
+    <meta property="og:title" content="Thailand - Kiminoto" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="https://www.youtube.com" />
-    <meta property="og:image" content="https://www.youtube.com" />
-    <meta property="og:description" content="5555555" />
+    <meta property="og:image" content="https://images.squarespace-cdn.com/content/v1/55a8d6f7e4b054bcba8dfc63/1553722667971-PCITKC64QFSB7YD343GI/test+1.png" />
+    <meta property="og:description" content="Hello this is introduction 100 words in setting.txt file" />
     <meta property="og:site_name" content="https://www.youtube.com" />
-    <meta property="article:author" content="https://www.youtube.com" />
-    <meta property="article:published_time" content="https://www.youtube.com" />
-    <meta property="article:modified_time" content="https://www.youtube.com" />
-    <meta property="article:section" content="https://www.youtube.com" />
-    <meta property="article:tag" content="https://www.youtube.com, https://www.youtube.com, https://www.youtube.com" />
+    <meta property="article:author" content="Kiminoto" />
+    <meta property="article:published_time" content="2023-01-19" />
+    <meta property="article:modified_time" content="2023-01-19" />
+    <meta property="article:section" content="Thailand" />
+    <meta property="article:tag" content="Thailand, Japan, Hongkong" />
 </head>
 <body>
 
-    <h1>This is Topic1 Replacement.</h1>
+    <h1>Topic1</h1>
     <section id="intro">
-        <p>5555555</p>
+        <p>Hello this is introduction 100 words in setting.txt file</p>
     </section>
     <nav>
         <h2>Table of contents</h2>
         <ul>
-            <li><a href="#section1">{Topic2-1}</a></li>
-            <li><a href="#section2">{Topic2-2}</a></li>
-            <li><a href="#section3">{Topic2-3}</a></li>
-            <li><a href="#section4">{Topic2-4}</a></li>
+            <li><a href="#section1">Topic2</a></li>
+            <li><a href="#section2">Topic3</a></li>
+            <li><a href="#section3">Topic4</a></li>
+            <li><a href="#section4">Topic5</a></li>
             <li><a href="#section_tag">Tag</a></li>
         </ul>
     </nav>
     <center>
-        <a href="" keyword="https://www.youtube.com" rel="follow"><img src="https://www.youtube.com" alt="https://www.youtube.com" loading="lazy"></a>
+        <a href="https://www.youtube.com" keyword="Thailand" rel="follow"><img src="https://images.squarespace-cdn.com/content/v1/55a8d6f7e4b054bcba8dfc63/1553722667971-PCITKC64QFSB7YD343GI/test+1.png" alt="Thailand" loading="lazy"></a>
     </center>
     <section id="section1">
-        <h2 id="secton1_1">{Topic2-1}</h2>
-            <h3 id="secton1_1_1">{Topic3-1}</h3>
-                <p>{article1}</p>
-                <p>{article2}</p>
-            <h3 id="secton1_1_2">{Topic3-2}</h3>
-                <p>{article3}</p>
-                <p>{article4}</p>
-            <h3 id="secton1_1_3">{Topic3-3}</h3>
-                <p>{article5}</p>
-                <p>{article6}</p>
-            <h3 id="secton1_2_1">{Topic3-4}</h3>
-                <p>{article7}</p>
-                <p>{article8}</p>
-            <h3 id="secton1_2_2">{Topic3-5}</h3>
-                <p>{article9}</p>
-                <p>{article10}</p>
-            <h3 id="secton1_2_3">{Topic3-6}</h3>
-                <p>{article11}</p>
-                <p>{article12}</p>
+        <h2 id="secton1_1">Topic2</h2>
+            <h3 id="secton1_1_1">Topic6</h3>
+                <p>1</p>
+                <p>2</p>
+            <h3 id="secton1_1_2">Topic7</h3>
+                <p>3</p>
+                <p>4</p>
+            <h3 id="secton1_1_3">Topic8</h3>
+                <p>5</p>
+                <p>6</p>
+            <h3 id="secton1_2_1">Topic9</h3>
+                <p>7</p>
+                <p>8</p>
+            <h3 id="secton1_2_2">Topic10</h3>
+                <p>9</p>
+                <p>10</p>
+            <h3 id="secton1_2_3">Topic11</h3>
+                <p>11</p>
+                <p>12</p>
     </section>
     <section id="section2">
-        <h2 id="secton2_1">{Topic2-2}</h2>
-            <h3 id="secton2_1_1">{Topic3-7}</h3>
-                <p>{article13}</p>
-                <p>{article14}</p>
-            <h3 id="secton2_1_2">{Topic3-8}</h3>
-                <p>{article14}</p>
-                <p>{article15}</p>
-            <h3 id="secton2_1_3">{Topic3-9}</h3>
-                <p>{article17}</p>
-                <p>{article18}</p>
+        <h2 id="secton2_1">Topic3</h2>
+            <h3 id="secton2_1_1">Topic12</h3>
+                <p>13</p>
+                <p>14</p>
+            <h3 id="secton2_1_2">Topic13</h3>
+                <p>14</p>
+                <p>15</p>
+            <h3 id="secton2_1_3">Topic14</h3>
+                <p>17</p>
+                <p>18</p>
     </section>
     <section id="section3">
-        <h2 id="secton3_1">{Topic2-3}</h2>
-            <h3 id="secton3_1_1">{Topic3-10}</h3>
-                <p>{article19}</p>
-                <p>{article20}</p>
-            <h3 id="secton3_1_2">{Topic3-11}</h3>
-                <p>{article21}</p>
-                <p>{article22}</p>
-            <h3 id="secton3_1_3">{Topic3-12}</h3>
-                <p>{article23}</p>
-                <p>{article24}</p>
-            <h3 id="secton3_2_1">{Topic3-13}</h3>
-                <p>{article25}</p>
-                <p>{article26}</p>
-            <h3 id="secton3_2_2">{Topic3-14}</h3>
-                <p>{article27}</p>
-                <p>{article28}</p>
-            <h3 id="secton3_2_3">{Topic3-15}</h3>
-                <p>{article29}</p>
-                <p>{article30}</p>
+        <h2 id="secton3_1">Topic4</h2>
+            <h3 id="secton3_1_1">Topic15</h3>
+                <p>19</p>
+                <p>20</p>
+            <h3 id="secton3_1_2">Topic16</h3>
+                <p>21</p>
+                <p>22</p>
+            <h3 id="secton3_1_3">Topic17</h3>
+                <p>23</p>
+                <p>24</p>
+            <h3 id="secton3_2_1">Topic18</h3>
+                <p>25</p>
+                <p>26</p>
+            <h3 id="secton3_2_2">Topic19</h3>
+                <p>27</p>
+                <p>28</p>
+            <h3 id="secton3_2_3">Topic20</h3>
+                <p>29</p>
+                <p>30</p>
     </section>
     <section id="section4">
-        <h2 id="secton4_1">{Topic2-4}</h2>
-            <h3 id="secton4_1_1">{Topic3-16}</h3>
-                <p>{article31}</p>
-                <p>{article32}</p>
-            <h3 id="secton4_1_2">{Topic3-17}</h3>
-                <p>{article33}</p>
-                <p>{article34}</p>
-            <h3 id="secton4_1_3">{Topic3-18}</h3>
-                <p>{article35}</p>
-                <p>{article36}</p>
-            <h3 id="secton4_2_1">{Topic3-19}</h3>
-                <p>{article37}</p>
-                <p>{article38}</p>
-            <h3 id="secton4_2_2">{Topic3-20}</h3>
-                <p>{article39}</p>
-                <p>{article40}</p>
-            <h3 id="secton4_2_3">{Topic3-21}</h3>
-                <p>{article41}</p>
-                <p>{article42}</p>
-            <h3 id="secton4_3_1">{Topic3-22}</h3>
-                <p>{article43}</p>
-                <p>{article44}</p>
-            <h3 id="secton4_3_2">{Topic3-23}</h3>
-                <p>{article45}</p>
-                <p>{article46}</p>
-            <h3 id="secton4_3_3">{Topic3-24}</h3>
-                <p>{article47}</p>
-                <p>{article48}</p>
+        <h2 id="secton4_1">Topic5</h2>
+            <h3 id="secton4_1_1">Topic21</h3>
+                <p>31</p>
+                <p>32</p>
+            <h3 id="secton4_1_2">Topic22</h3>
+                <p>33</p>
+                <p>34</p>
+            <h3 id="secton4_1_3">Topic23</h3>
+                <p>35</p>
+                <p>36</p>
+            <h3 id="secton4_2_1">Topic24</h3>
+                <p>37</p>
+                <p>38</p>
+            <h3 id="secton4_2_2">Topic25</h3>
+                <p>39</p>
+                <p>40</p>
+            <h3 id="secton4_2_3">Topic26</h3>
+                <p>41</p>
+                <p>42</p>
+            <h3 id="secton4_3_1">Topic27</h3>
+                <p>43</p>
+                <p>44</p>
+            <h3 id="secton4_3_2">Topic28</h3>
+                <p>45</p>
+                <p>46</p>
+            <h3 id="secton4_3_3">Topic29</h3>
+                <p>47</p>
+                <p>48</p>
     </section>
     <section id="section_tag">
         <h2>Tag</h2>
-        <p>{tag}</p>
+        <p>Thailand, Japan, Hongkong</p>
     </section>
 
 </body>
