--- a/pbn/seo_structure.html
+++ b/pbn/seo_structure.html
@@ -37,7 +37,7 @@
         </ul>
     </nav>
     <center>
-        <a href="" keyword="{Keyword1}" rel="follow"><img src="{Image_url}" alt="{Keyword1}" loading="lazy"></a>
+        <a href="{Web}" keyword="{Keyword1}" rel="follow"><img src="{Image_url}" alt="{Keyword1}" loading="lazy"></a>
     </center>
     <section id="section1">
         <h2 id="secton1_1">{Topic2-1}</h2>
@@ -125,7 +125,7 @@
     </section>
     <section id="section_tag">
         <h2>Tag</h2>
-        <p>{tag}</p>
+        <p>{Tag}</p>
     </section>
 
 </body>
