pbn - add 3 image section

--- a/pbn/output.html
+++ b/pbn/output.html
@@ -62,6 +62,9 @@
     </section>
     <section id="section2">
         <h2 id="secton2_1">Affiliate marketing</h2>
+            <center>
+                <a href="https://www.youtube.com" keyword="Thailand" rel="follow"><img src="https://thumbs.dreamstime.com/z/under-construction-badge-logo-under-construction-badge-logo-sign-108901883.jpg" alt="Thailand" loading="lazy"></a>
+            </center>
             <h3 id="secton2_1_1">Offering consulting or coaching services</h3>
                 <p>Optimizing images: Search engines can't see images, so it's important to optimize them with appropriate tags and file names.</p>
                 <p>Optimizing URLs: Make sure that your URLs are clean and easy to understand.</p>
@@ -95,6 +98,9 @@
     </section>
     <section id="section4">
         <h2 id="secton4_1">Online tutoring or teaching</h2>
+            <center>
+                <a href="https://www.youtube.com" keyword="Thailand" rel="follow"><img src="https://img.freepik.com/free-vector/flat-construction-landing-page_23-2148191292.jpg" alt="Thailand" loading="lazy"></a>
+            </center>
             <h3 id="secton4_1_1">Online writing or content creation services</h3>
                 <p>Another way to know if Googlebot has visited your website is by checking your website's crawl stats. Crawl stats are a feature of the Google Search Console that provides information about how often Googlebot crawls your website and how many pages it crawls. This information can help you understand how often Googlebot is visiting your website and how many pages it's indexing.</p>
                 <p>It's also important to note that if Googlebot visits your website and finds a lot of errors or broken links, it will decrease the score for SEO and it will not show in the search engine results page. Therefore, it's important to regularly check and fix any errors or broken links on your website to ensure that Googlebot can easily crawl and index your pages.</p>
