--- a/pbn/seo_structure.html
+++ b/pbn/seo_structure.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="{Keyword1} - {Name}" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="{Web}" />
-    <meta property="og:image" content="{Image_url}" />
+    <meta property="og:image" content="{Image_url1}" />
     <meta property="og:description" content="{Intro}" />
     <meta property="og:site_name" content="{Web}" />
     <meta property="article:author" content="{Name}" />
@@ -37,7 +37,7 @@
         </ul>
     </nav>
     <center>
-        <a href="{Web}" keyword="{Keyword1}" rel="follow"><img src="{Image_url}" alt="{Keyword1}" loading="lazy"></a>
+        <a href="{Web}" keyword="{Keyword1}" rel="follow"><img src="{Image_url1}" alt="{Keyword1}" loading="lazy"></a>
     </center>
     <section id="section1">
         <h2 id="secton1_1">{Topic2-1}</h2>
@@ -62,6 +62,9 @@
     </section>
     <section id="section2">
         <h2 id="secton2_1">{Topic2-2}</h2>
+            <center>
+                <a href="{Web}" keyword="{Keyword1}" rel="follow"><img src="{Image_url2}" alt="{Keyword1}" loading="lazy"></a>
+            </center>
             <h3 id="secton2_1_1">{Topic3-7}</h3>
                 <p>{article13}</p>
                 <p>{article14}</p>
@@ -95,6 +98,9 @@
     </section>
     <section id="section4">
         <h2 id="secton4_1">{Topic2-4}</h2>
+            <center>
+                <a href="{Web}" keyword="{Keyword1}" rel="follow"><img src="{Image_url3}" alt="{Keyword1}" loading="lazy"></a>
+            </center>
             <h3 id="secton4_1_1">{Topic3-16}</h3>
                 <p>{article31}</p>
                 <p>{article32}</p>
