--- a/pbn/seo_structure_full.html
+++ b/pbn/seo_structure_full.html
@@ -1,4 +1,27 @@
-<plaintext>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{Keyword1} - My Website</title>
+    <meta name="description" content="{Intro}" />
+    <meta name="keywords" content="{Keyword1}, {Keyword2}, {Keyword3}" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="{Web1}">
+    <meta property="og:title" content="{Keyword1} - {Name}" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="{Web1}" />
+    <meta property="og:image" content="{Image_url1}" />
+    <meta property="og:description" content="{Intro}" />
+    <meta property="og:site_name" content="{Web1}" />
+    <meta property="article:author" content="{Name}" />
+    <meta property="article:published_time" content="{Date}" />
+    <meta property="article:modified_time" content="{Date}" />
+    <meta property="article:section" content="{Keyword1}" />
+    <meta property="article:tag" content="{Keyword1}, {Keyword2}, {Keyword3}" />
+</head>
+<body>
+
     <h1>{Topic1}</h1>
     <section id="intro">
         <p>{Intro}</p>
@@ -14,7 +37,7 @@
         </ul>
     </nav>
     <center>
-        <a href="{Web}" keyword="{Keyword1}" rel="follow"><img src="{Image_url1}" alt="{Keyword1}" loading="lazy"></a>
+        <a href="{Web1}" keyword="{Keyword1}" rel="follow"><img src="{Image_url1}" alt="{Keyword1}" loading="lazy"></a>
     </center>
     <section id="section1">
         <h2 id="secton1_1">{Topic2-1}</h2>
@@ -40,7 +63,7 @@
     <section id="section2">
         <h2 id="secton2_1">{Topic2-2}</h2>
             <center>
-                <a href="{Web}" keyword="{Keyword1}" rel="follow"><img src="{Image_url2}" alt="{Keyword1}" loading="lazy"></a>
+                <a href="{Web1}" keyword="{Keyword1}" rel="follow"><img src="{Image_url2}" alt="{Keyword1}" loading="lazy"></a>
             </center>
             <h3 id="secton2_1_1">{Topic3-7}</h3>
                 <p>{article13}</p>
@@ -76,7 +99,7 @@
     <section id="section4">
         <h2 id="secton4_1">{Topic2-4}</h2>
             <center>
-                <a href="{Web}" keyword="{Keyword1}" rel="follow"><img src="{Image_url3}" alt="{Keyword1}" loading="lazy"></a>
+                <a href="{Web1}" keyword="{Keyword1}" rel="follow"><img src="{Image_url3}" alt="{Keyword1}" loading="lazy"></a>
             </center>
             <h3 id="secton4_1_1">{Topic3-16}</h3>
                 <p>{article31}</p>
@@ -110,3 +133,6 @@
         <h2>Tag</h2>
         <p>{Tag}</p>
     </section>
+
+</body>
+</html>
