--- a/pbn/seo_structure.html
+++ b/pbn/seo_structure.html
@@ -14,7 +14,7 @@
         </ul>
     </nav>
     <center>
-        <a href="{Web}" keyword="{Keyword1}" rel="follow"><img src="{Image_url1}" alt="{Keyword1}" loading="lazy"></a>
+        <a href="{Web1}" keyword="{Keyword1}" rel="follow"><img src="{Image_url1}" alt="{Keyword1}" loading="lazy"></a>
     </center>
     <section id="section1">
         <h2 id="secton1_1">{Topic2-1}</h2>
@@ -40,7 +40,7 @@
     <section id="section2">
         <h2 id="secton2_1">{Topic2-2}</h2>
             <center>
-                <a href="{Web}" keyword="{Keyword1}" rel="follow"><img src="{Image_url2}" alt="{Keyword1}" loading="lazy"></a>
+                <a href="{Web1}" keyword="{Keyword1}" rel="follow"><img src="{Image_url2}" alt="{Keyword1}" loading="lazy"></a>
             </center>
             <h3 id="secton2_1_1">{Topic3-7}</h3>
                 <p>{article13}</p>
@@ -76,7 +76,7 @@
     <section id="section4">
         <h2 id="secton4_1">{Topic2-4}</h2>
             <center>
-                <a href="{Web}" keyword="{Keyword1}" rel="follow"><img src="{Image_url3}" alt="{Keyword1}" loading="lazy"></a>
+                <a href="{Web1}" keyword="{Keyword1}" rel="follow"><img src="{Image_url3}" alt="{Keyword1}" loading="lazy"></a>
             </center>
             <h3 id="secton4_1_1">{Topic3-16}</h3>
                 <p>{article31}</p>
